refactor: rename move-java-integrate-jlink to move-java-out-of-plugin, add debug logging to session_start.sh